# rust-pwa-example

./: .gitignore  Cargo.toml  README.md  index.html  main.js  manifest.json  service-worker.js
.cargo/: config.toml
pkg/: index.d.ts  index.js  index_bg.wasm.d.ts  package.json
src/: lib.rs
