[package]
name = "rust-pwa-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
wasm-bindgen = "0.2"
ecies = { version = "0.2", default-features = false, features = ["pure"] }
hex = "0.4"
serde-wasm-bindgen = "0.6"
nostr-sdk = "0.39"
wasm-bindgen-futures = "0.4"
surrealdb = { version = "2.2", features = ["kv-indxdb"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
console_log = { version = "1.0", features = ["color"] }
log = "0.4"
